[gd_scene load_steps=9 format=3 uid="uid://dbl6hwa0v1ug3"]

[ext_resource type="PackedScene" uid="uid://bpjqvkj1kr5fo" path="res://scenes/game/player.tscn" id="1_e2o6t"]
[ext_resource type="Script" uid="uid://b24673wfunc3n" path="res://scripts/game/game.gd" id="1_fc0e3"]
[ext_resource type="PackedScene" uid="uid://be4hopurbq5pq" path="res://scenes/game/tree.tscn" id="2_feb5d"]
[ext_resource type="PackedScene" uid="uid://xxfc5ha2onxg" path="res://scenes/game/nerd.tscn" id="2_lfrn8"]
[ext_resource type="AudioStream" uid="uid://dyvhpmnn3xsxb" path="res://audio/prowler-sound-effect_6bXErot.wav" id="4_fc0e3"]
[ext_resource type="Script" uid="uid://b480cqti2atim" path="res://scripts/menu/to_main_menu.gd" id="5_5i0tg"]
[ext_resource type="Script" uid="uid://cxeb5otsj7hmg" path="res://scripts/menu/to_game.gd" id="5_bdhmt"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_bdhmt"]

[node name="Game" type="Node2D" node_paths=PackedStringArray("player")]
y_sort_enabled = true
script = ExtResource("1_fc0e3")
player = NodePath("PlayerLol")
nerd_scene = ExtResource("2_lfrn8")

[node name="StaticLayerParentNode" type="CanvasLayer" parent="."]
layer = -128

[node name="StaticBody2D" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(130, 254)

[node name="StaticBody2D2" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(89, 480)

[node name="StaticBody2D3" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(242, 504)

[node name="StaticBody2D4" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(87, 687)

[node name="StaticBody2D5" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(257, 715)

[node name="StaticBody2D6" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(153, 877)

[node name="StaticBody2D7" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(285, 952)

[node name="StaticBody2D8" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(-31, 1010)

[node name="PlayerLol" parent="." instance=ExtResource("1_e2o6t")]
unique_name_in_owner = true
y_sort_enabled = false
position = Vector2(958, 542)

[node name="WaveTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="SubTimer" type="Timer" parent="WaveTimer"]
unique_name_in_owner = true
one_shot = true

[node name="DeadMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="DeadMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.658824)

[node name="RichTextLabel" type="RichTextLabel" parent="DeadMenu/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -534.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 206
text = "Tomatoh no!
You died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="DeadMenu"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.644
anchor_right = 0.5
anchor_bottom = 0.644
offset_left = -223.5
offset_top = -89.5201
offset_right = 223.5
offset_bottom = 76.4799
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 116
text = "Restart"
script = ExtResource("5_bdhmt")

[node name="MainMenuButton" type="Button" parent="DeadMenu"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.644
anchor_right = 0.5
anchor_bottom = 0.644
offset_left = -319.5
offset_top = 114.48
offset_right = 319.5
offset_bottom = 280.48
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 116
text = "Main Menu"
script = ExtResource("5_5i0tg")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_fc0e3")
autoplay = true
max_distance = 1e+07
panning_strength = 0.0

[node name="World" type="Node" parent="."]

[node name="BorderHitbox" type="StaticBody2D" parent="World"]

[node name="Bottom" type="CollisionShape2D" parent="World/BorderHitbox"]
position = Vector2(0, 5000)
shape = SubResource("WorldBoundaryShape2D_bdhmt")
one_way_collision = true

[node name="Left" type="CollisionShape2D" parent="World/BorderHitbox"]
position = Vector2(-5000, 0)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_bdhmt")
one_way_collision = true

[node name="Right" type="CollisionShape2D" parent="World/BorderHitbox"]
position = Vector2(5000, 0)
rotation = 4.71239
shape = SubResource("WorldBoundaryShape2D_bdhmt")
one_way_collision = true

[node name="Top" type="CollisionShape2D" parent="World/BorderHitbox"]
position = Vector2(0, -5000)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_bdhmt")
one_way_collision = true

[node name="VisibleBorder" type="Node" parent="World"]

[node name="Top" type="ColorRect" parent="World/VisibleBorder"]
offset_left = -7000.0
offset_top = -6000.0
offset_right = 7000.0
offset_bottom = -5000.0
color = Color(0, 0, 0, 0.392157)

[node name="Left" type="ColorRect" parent="World/VisibleBorder"]
offset_left = -7000.0
offset_top = -5000.0
offset_right = -5000.0
offset_bottom = 5000.0
color = Color(0, 0, 0, 0.392157)

[node name="Right" type="ColorRect" parent="World/VisibleBorder"]
offset_left = 5000.0
offset_top = -5000.0
offset_right = 7000.0
offset_bottom = 5000.0
color = Color(0, 0, 0, 0.392157)

[node name="Bottom" type="ColorRect" parent="World/VisibleBorder"]
offset_left = -7000.0
offset_top = 5000.0
offset_right = 7000.0
offset_bottom = 6000.0
color = Color(0, 0, 0, 0.392157)

[connection signal="died_lol" from="PlayerLol" to="." method="_on_player_lol_died_lol"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="WaveTimer/SubTimer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="DeadMenu/RestartButton" to="DeadMenu/RestartButton" method="_on_pressed"]
[connection signal="pressed" from="DeadMenu/MainMenuButton" to="DeadMenu/MainMenuButton" method="_on_pressed"]
